  * As such, the 'hp_percent' and 'mp_percent' stat bonuses are considered deprecated.
* Players are directed to the Mods configuration menu via a dialog box when no core mod is enabled. (kr4ft3r)
  * Core mods are now labeled as such in their tooltips on the Mods configuration menu.

Engine fixes:

* Fixed set item tooltips showing incorrect number of equipped items if a set item was on an inactive loadout.
* Fixed dev console commands not working if they were preceded by whitespace.
* Fixed spawning entities not counting towards summoned entity count.
* Fix broken gamepad navigation after closing Powers menu while on a non-default tab.
* Removed hard-coded minimum values for HP/MP steal and damage return.
* Fixed "activate" message incorrectly showing in MenuPowers tooltips.
* Fix some cases where 'min' damage/absorb could be greater than the cooresponding 'max' value.
* Fixed text input issues with deleting text on Android.

Game updates:

* Fireball and Ice Bolt scrolls now give the player a 10 second period in which their basic attacks (Swing, Shoot, Channel) are replaced with the scroll power.
* Fixed the naming of scroll damage as it appears in power description tooltips.
* Lowered Lezaith's slow resistance to 50%, down from 100%
* Lowered Lezaith's stun resistance to 90%, down from 100%

Translation updates:

* German (de) update (Wuzzy2)
* Scottish Gaelic (gd) update (GunChleoc)
* Indonesian (id) update (Kirim Saja)
* Italian (it) update (Riccardi Unix)
* Japanese (ja) update (Sato Hayato)
* Korean (ko) update (ks k, YooJin919)
* Polish (pl) update (Pawonashi)
* Chinese (zh) update (Issac Zhang)



Flare v1.13.04

Engine features:

* Added 'bar_gfx' property to menus/enemy.txt for setting the "fill" image

Engine fixes:

* Fix crash when trying to read a non-existent file with INCLUDE
* Fix passive powers not being correctly re-applied after death
* Improve performance of WidgetListBox by caching all items instead of just the visible ones


